# Ros2Jazzy

./: .gitignore  EMBOBOT_DEBUG_METHODOLOGY.md  EMBOBOT_DEBUG_SUMMARY.md  frames_2026-06-24_17.11.18.gv  pyproject.toml  src.code-workspace
.deepseek/state/: subagents.v1.json
src/ch03_publisher/: package.xml  setup.cfg  setup.py
src/ch03_publisher/ch03_publisher/: battery_color_node.py  battery_node.py
src/ch04_subscriber/: package.xml  setup.cfg  setup.py
src/ch04_subscriber/ch04_subscriber/: alert_node.py
src/ch05_interfaces/: CMakeLists.txt  package.xml
src/ch05_interfaces/srv/: ResetSensor.srv
src/ch05_service/: package.xml  setup.cfg  setup.py
src/ch05_service/ch05_service/: battery_color_service_node.py  led_client.py  led_server.py  sensor_reset_client.py  sensor_reset_server.py
src/ch06_action/: package.xml  setup.cfg  setup.py
src/ch06_action/ch06_action/: draw_circle_client.py  draw_circle_server.py
src/ch06_interfaces/: CMakeLists.txt  package.xml
src/ch06_interfaces/action/: DrawCircle.action
src/ch07_params/: package.xml  setup.cfg  setup.py
src/ch07_params/ch07_params/: battery_node.py
src/ch07_params/config/: battery_default.yaml  battery_node.yaml
src/embobot_description/: CMakeLists.txt  package.xml
src/embobot_description/config/: embobot_controllers.yaml
src/embobot_description/launch/: display.launch.py  embobot_mock.launch.py
src/embobot_description/rviz/: embobot.rviz
src/embobot_gazebo/: CMakeLists.txt  package.xml  setup.py
src/embobot_tf_demo/: package.xml  setup.cfg  setup.py
(+16 files in other folders)
